[package]
name = "libspm-rs"
description = "A rust wrapper for LibSPM"
repository = "https://github.com/Soviet-Linux/LibSPM-rs"
license = "The GPLv3 License (GPLv3)"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.132"
